--- a/path/src/Insurance/ContentBundle/Resources/config/routing.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/routing.yml
@@ -104,6 +104,6 @@ payment_processing:
 payment_success:
     pattern: /payment_success
     defaults: { _controller: "InsuranceContentBundle:Default:paymentSuccess" }
-agreement:
-    pattern: /agreement
-    defaults: { _controller: "InsuranceContentBundle:Default:agreement" }
+privacypolicy:
+    pattern: /privacypolicy
+    defaults: { _controller: "InsuranceContentBundle:Default:privacypolicy" }
