--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -1,13 +1,13 @@
 imports:
     - { resource: parameters.yml }
 parameters:
-    admin.emails: 'polisvit@gmail.com'
+    admin.emails: ['polisvit@gmail.com','e.kuguk@gmail.com']
     email.send.from: 'noreply@polismarket.com.ua'
     email.name: 'PolisMarket'
     site.name: 'Страховое агенство "ПОЛИСМАРКЕТ"'
     site.domain: 'polismarket.com.ua'
     contact.email: 'support@polismarket.com.ua'
-    contact.phone: '(066)931-06-06'
+    contact.phone: '(067)426-44-11'
     savings: #show user fake money savings
         date.start: '30.07.2013' #initial date to start count
         initial.sum: 12345 #initial money amount
@@ -17,7 +17,7 @@ parameters:
         min: 1.0
         max: 6.0
         step: 0.1
-    insure.period: [0.5, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+    insure.period: [6, 7, 8, 9, 10, 11, 12]
     dgo.sum: [ 50000, 100000, 150000, 200000, 250000]
     ns.sum: [ 5000, 10000, 25000, 50000]
     passengers:
