--- a/path/src/Insurance/ContentBundle/Resources/config/config.yml
+++ b/path/src/Insurance/ContentBundle/Resources/config/config.yml
@@ -17,7 +17,7 @@ parameters:
         min: 1.0
         max: 6.0
         step: 0.1
-    insure.period: [6, 7, 8, 9, 10, 11, 12]
+    insure.period: [6, 8, 10, 12]
     dgo.sum: [ 50000, 100000, 150000, 200000, 250000]
     ns.sum: [ 5000, 10000, 25000, 50000]
     passengers:
